--- a/order-management.html
+++ b/order-management.html
@@ -262,7 +262,7 @@
 							<p>From the data collected I was able to put together a complete picture of what the Production Team needed to carry out their work, and translate that into a functional prototype. This prototype was useful for collecting feedback from the key stakeholder and the Development Team.</p>
 
 							<h3>Testing</h3>
-							<p>Before the release of the system to End Users I conducted Usability Study with five Production Team members. From this study I documented and prioritized bugs and usability issues to be fixed.</p>
+							<p>Before the release of the system to End Users I conducted a Usability Study with five Production Team members. From this study I documented and prioritized bugs and usability issues to be fixed.</p>
 
 							<h2>Methods</h2>
 							<div class="items style1 medium align-center onscroll-fade-in">
