--- a/about.html
+++ b/about.html
@@ -124,15 +124,15 @@
 								I was exposed to the world of Experience Design by my colleague at Peapod, who mentioned he was in the HCI graduate program at DePaul at the time. I knew then I wanted to pursue the same career path, and so I enrolled in the program. I received my <a href="https://www.cdm.depaul.edu/academics/Pages/MSinHuman-ComputerInteraction.aspx" target="_blank">MS in Human-Computer Interaction</a> from <a href="https://www.depaul.edu/Pages/default.aspx" target="_blank">DePaul University</a> in 2017.
 							</p>
 							<p>
-								My design philosophy is I believe in trying to get an understanding of a problem space, before jumping into a solution. I’m driven by working with smart energetic people. I enjoy collaborating with others, and I often like to observe how others attack a problem.
+								My design philosophy is I believe in trying to get an understanding of a problem space, before jumping into a solution. I’m driven by working with smart energetic people, and I'm constantly trying to become a more effective communicator. I enjoy collaborating with others, and I often like to observe how others attack a problem.
 							</p>
 							<p>
 								I recently relocated to southern California from Chicago to be with my now wife. We enjoy life together with our daughter, and our adorable pup Lucy.
 							</p>
 								<ul>
-									<li><strong>Interests:</strong> User-centered Design, Embodied Interaction, Cognitive Psychology, Art, Sculpture, Photography, DIY Home Improvement Projects
+									<li><strong>Background:</strong> User-centered Design, Interaction Design, Web Design, Mobile Design, Visual Design</li>
 									<li><strong>Influences:</strong> Don Norman, <i>Design of Everyday Things</i></li>
-									<li><strong>Background:</strong> Visual Design, Web/Print Design, Mobile Design</li>
+									<li><strong>Interests:</strong> Embodied Interaction, Cognitive Psychology, Art, Sculpture, Photography, DIY Home Improvement Projects</li>
 								</ul>
 						</div>
 						<div class="image">
