--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
 				<!-- Order Management System -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Order Management System</h2>
+							<header>
+								<h2>Order Management System</h2>
+								<p>FinTech</p>
+							</header>
 							<p>I was tasked with designing a system that would allow Stretto's print and mail facility to bring the legal noticing business in-house which would result in capturing $2 million in annual revenue.</p>
 							<ul class="actions vertical">
 								<li><a href="order-management.html" class="button big wide">Details</a></li>
@@ -143,7 +146,10 @@
 				<!-- Peapod Gateway -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Peapod Gateway Page</h2>
+							<header>
+								<h2>Peapod Gateway Page</h2>
+								<p>eCommerce</p>
+							</header>
 							<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
 							<ul class="actions vertical">
 								<li><a href="gateway.html" class="button big wide">Details</a></li>
@@ -157,7 +163,10 @@
 				<!-- Peapod Help Section -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Peapod Help Section</h2>
+							<header>
+								<h2>Peapod Help Section</h2>
+								<p>eCommerce</p>
+							</header>
 							<p>With the redesign of the Peapod website, the existing Help section became outdated. This presented the opportunity for me to consolidate articles and construct a new, optimal information architecture.</p>
 							<ul class="actions vertical">
 								<li><a href="help-section.html" class="button big wide">Details</a></li>
@@ -171,7 +180,10 @@
 				<!-- Ice-Burg -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Ice-Burg Project</h2>
+							<header>
+								<h2>Ice-Burg Project</h2>
+								<p>Exhibit Design</p>
+							</header>
 							<p>I was part of a team that won a grant to create an interactive art installation entitled "Ice-Burg", that responds to proximity and touch by engaging the user with music and lights. Ice-Burg explores the concept of placemaking in public spaces by encouraging interactions and connecting people who would otherwise not know each other.</p>
 							<ul class="actions vertical">
 								<li><a href="ice-burg.html" class="button big wide">Details</a></li>
@@ -185,7 +197,10 @@
 				<!-- Shedd Aquarium -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Shedd Aquarium Accessibility</h2>
+							<header>
+								<h2>Shedd Aquarium Accessibility</h2>
+								<p>Exhibit Design</p>
+							</header>
 							<p>Currently most museums do not design their exhibits to accommodate visitors with disabilities, particularly those with visual impairments. I was part of a team that investigated this problem space, and provided recommendations for improvement to the Shedd Aquarium in Chicago.</p>
 							<ul class="actions vertical">
 								<li><a href="shedd-aquarium.html" class="button big wide">Details</a></li>
