--- a/gateway.html
+++ b/gateway.html
@@ -12,6 +12,7 @@
 		  gtag('config', 'UA-129383153-1');
 		</script>
 		<title>Tristan Bernardo | Product Designer: Peapod Gateway Page</title>
+		<meta name="robots" content="noindex,nofollow">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -122,10 +123,12 @@
 											</header>
 											<span class="image fit"><img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
 											<h2>Summary</h2>
-											<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
+											<p>Peapod, an online grocery delivery service, underwent a complete overhaul of its website to a new modern responsive website and hybrid app. As part of this effort I had to redesign the old gateway page into a new responsive page which allows users to easily sign in or enter their zip code to shop their specific product mix for their region.</p>
 											<ul>
 												<li><strong>Role:</strong> UI/UX Designer</li>
-												<li><strong>Deliverables:</strong> Hi-fi interactive prototype for four breakpoints</li>
+												<li><strong>Company:</strong> Peapod</li>
+												<li><strong>Methodology:</strong> Agile</li>
+												<li><strong>Tools:</strong> Usertesting.com, Axure, JIRA, Confluence</li>
 											</ul>
 										</div>
 									</section>
@@ -213,7 +216,10 @@
 				<!-- Process -->
 					<section class="wrapper style1 align-left">
 						<div class="inner medium">
-							<h2>Design Problem</h2>
+							<h2>Problem Space</h2>
+							<p>Peapod, founded in 1989, was one of the first eCommerce shopping sites. Their website had not been update for many years and the time had come to upgrade and conform to modern web standards. Part of this effort was the task of redesigning the gateway page, which required users to either log in or input their zip code because different parts of the country had different product mixes. Peapod had a user base of 30,000 users and 1,700 active sessions at a given time. My job was to design a gateway page which allowed users to pass through as effortlessly as possible to minimize bounce rate and increase the amount of users shopping the site.</p>
+							
+							<h3>Main constraints to consider:</h3>
 							<ul>
 								<li>Existing gateway page had a high bounce rate of 80%</li>
 								<li>New gateway page must get visitors into the site with minimal resistance
@@ -221,33 +227,60 @@
 								<li>New gateway page must support dynamic promotional content</li>
 								<li>Must comply with WCAG 2.0 AA standards</li>
 							</ul>
+
+							<h2>Process</h2>
+
+							<h3>Research</h3>
+							<p>First I conducted a competitive analysis of competitors websites, researched best practices design patterns, and compared that with Peapod's existing gateway page.</p>
+
+							<h3>Evaluate</h3>
+							<p>Next I conducted a heuristic evaluation of Peapod's existing gateway page to find usability issues which may negatively impact user behavior.</p>
+
+							<h3>Test</h3>
+							<p>Then I designed and administered a usability test on the existing gateway page, to see how users think about and interact with the existing gateway page.</p>
+
+							<h3>Design</h3>
+							<p>From the leanings I gathered I was able to sketch out a rough drawing and rapidly iterate through ideas, then design and prototype a high fidelity interactive prototype of a new gateway page for developers to implement.</p>
+
 							<h2>Methods</h2>
 							<div class="items style1 medium align-center onscroll-fade-in">
 								<section>
-									<span class="icon style2 major fa-desktop"></span>
-									<h3>Heuristic Evaluation</h3>
-								</section>
-								<section>
 									<span class="icon style2 major  fa-copy"></span>
 									<h3>Competitive Analysis</h3>
+									<p>I analyzed competitor websites such as Instacart &amp; FreshDirect.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-desktop"></span>
+									<h3>Heuristic Evaluation</h3>
+									<p>I documented instances of standard usability issues.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-user"></span>
 									<h3>User Testing</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-group"></span>
-									<h3>Observations</h3>
+									<p>I designed &amp; administered a remote un-moderated usability test using Usertesting.com.</p>
 								</section>
 								<section>
 									<span class="icon style2 major  fa-pencil"></span>
 									<h3>Sketching</h3>
+									<p>I sketched and rapidly iterated design ideas.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-object-ungroup"></span>
+									<h3>Wireframing</h3>
+									<p>I wireframed the general layout of the gateway page.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-object-group"></span>
 									<h3>Prototyping</h3>
+									<p>I designed and prototyped a high fidelity interactive prototype.</p>
 								</section>
 							</div>
+
+							<h2>Deliverables</h2>
+							<ul>
+								<li>Hi-fi Interactive Prototype (Axure)</li>
+							</ul>
+
 							<h2>Results</h2>
 							<ul>
 								<li>Bounce rate was reduced by 30%</li>
