--- a/order-management.html
+++ b/order-management.html
@@ -12,6 +12,7 @@
 		  gtag('config', 'UA-129383153-1');
 		</script>
 		<title>Tristan Bernardo | Product Designer: Order management System</title>
+		<meta name="robots" content="noindex,nofollow">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -242,7 +243,7 @@
 							<h2>Problem Space</h2>
 							<p>The type of business Stretto was attempting to capture is high volume, low margin. This meant that automation was needed in order to maintain a profit margin. In addtion, it was decided that the contract with the third party would not be renewed. This only left several months to define an MVP, design the system, and document the requirements for development.</p>
 
-							<h3>Main constraints we had to consider:</h3>
+							<h3>Main constraints to consider:</h3>
 							<ul>
 								<li>Re-routing orders from third party system to new internal system and data field standardization.</li>
 								<li>Supporting user profiles and permissions.</li>
@@ -257,6 +258,19 @@
 							
 							<h3>Research</h3>
 							<p>I started out by creating a Research Protocol which communicated to the Business the problem we're trying to solve for, the methods I would be using, how long the process will take, and the expected deliverables. I conducted user interviews with the team, observed their work process, and analyzed their systems, tools and deliverables.</p>
+							<h4>Research Goals</h4>
+							<ul>
+								<li>Understand domain and user’s specific needs, as well as partners’ needs</li>
+								<li>Synthesize user personas and journeys</li>
+							</ul>
+							<h4>Research Questions</h4>
+							<ul>
+								<li>Who are the users?</li>
+								<li>How do users manage their work process?</li>
+								<li>What are the user’s goals and motivations?</li>
+								<li>What are the user’s pain points?</li>
+								<li>What are the external dependencies?</li>
+							</ul>
 
 							<h3>Design</h3>
 							<p>From the data collected I was able to put together a complete picture of what the Production Team needed to carry out their work, and translate that into a functional prototype. This prototype was useful for collecting feedback from the key stakeholder and the Development Team.</p>
@@ -297,6 +311,7 @@
 									<p>I ran a Usability Study with End Users, before release, to uncover any bugs or usability issues.</p>
 								</section>
 							</div>
+							
 							<h2>Deliverables</h2>
 							<ul>
 								<li><a href="https://drive.google.com/file/d/1btccNNmO3Fe9JXwDHsV20M9eblwE3SLj/view?usp=sharing" target="_blank">User Stories (Google Sheets) <span class="icon fa-external-link"></span></a></li>
