--- a/help-section.html
+++ b/help-section.html
@@ -12,6 +12,7 @@
 		  gtag('config', 'UA-129383153-1');
 		</script>
 		<title>Tristan Bernardo | Product Designer: Peapod Help Section</title>
+		<meta name="robots" content="noindex,nofollow">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
