--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		  gtag('config', 'UA-129383153-1');
 		</script>
 		<title>Tristan Bernardo | Product Designer</title>
+		<meta name="robots" content="noindex,nofollow">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
